# monomind

./: .gitignore  .monographrc.example.json  AGENTS.md  CHANGELOG-v1.11.md  CHANGELOG.md  CLAUDE.local.md  CLAUDE.md  Cargo.toml  GRAPH_REPORT.md  LICENSE  PRODUCT.md  README.md  README2.md  SESSION_RECOVERY_REPORT.md  SESSION_RECOVERY_REPORT_PASS2.md  agentdb.rvf  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tagline.md  test-database-provider.rvf  tsconfig.json  vitest.config.ts
.agents/: README.md  config.toml  shared_instructions.md
.claude/: settings copy.json  settings.json  statusline-command.sh  statusline.sh
.claude-plugin/: README.md  marketplace.json  plugin.json
.githooks/: commit-msg
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY_CHECKLIST.md
.monograph/: coverage.json  iterations.json
.monomind/: budget.json  commit-hygiene.md  control.json  daemon-state.json  decisions.jsonl  last-dispatch.json  last-route.json  last-update-check.json  monograph-baseline.json  monograph.db-shm  registry.json  routing-feedback.jsonl  trigger-index.json  ua-enrich-status.json
.playwright-mcp/: page-2026-05-17T08-34-17-069Z.yml  page-2026-05-17T08-35-54-945Z.yml  page-2026-05-17T08-36-09-322Z.yml  page-2026-05-17T08-36-34-530Z.yml  page-2026-05-17T08-51-06-733Z.yml  page-2026-05-17T08-51-24-811Z.yml  page-2026-05-17T08-53-03-886Z.yml  page-2026-05-17T08-53-18-806Z.yml  page-2026-05-17T08-54-29-914Z.yml  page-2026-05-17T08-54-42-937Z.yml  page-2026-05-17T09-36-25-738Z.yml  page-2026-05-17T09-36-53-752Z.yml  page-2026-05-17T09-37-11-507Z.yml  page-2026-05-17T09-40-22-657Z.yml  page-2026-05-17T09-40-27-364Z.yml  page-2026-05-17T09-40-32-588Z.yml  page-2026-05-17T09-41-14-901Z.yml  (+26 more)
docs/: AUDIT-BACKLOG.md  (+8 more)
(+1482 files in other folders)
